# CSCI2100-Stock-Tracker

./: .gitignore  CMakeLists.txt  output.txt  readme.md  test_operations.txt
include/: Market.h  Stock.h
source code/: CMakeLists.txt  Market.cpp  Stock.cpp  main.cpp  txt_Generator.cpp
src/: Market.cpp  main.cpp
